# Pico_W_DCHP-Communication

./: CMakeLists.txt  README.md  main.cpp
dhcpserver/: dhcpserver.cpp
serverlogic/: serverlogic.cpp  serverlogic.h
